# project_C

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
artifacts/: SOL_monolithic_trades_oos.csv  SOL_trades_oos.csv  SOL_walkforward_trades_oos.csv
artifacts/paper_trading/: events.csv  events.jsonl
artifacts_saved/: SOL_monolithic_trades_oos.csv  SOL_trades_oos.csv  SOL_walkforward_trades_oos.csv
artifacts_trade-weight=25/: SOL_walkforward_trades_oos.csv
artifacts_trade-weight=50/: SOL_walkforward_trades_oos.csv
benchmarks/: benchmark_synthetic.py  benchmark_trading_pnl.py
models/: monolithic_20260505_201200.pt  monolithic_20260508_141756.pt  monolithic_temp_pre_oos_walk_0.pt  monolithic_temp_pre_oos_walk_1.pt  monolithic_temp_pre_oos_walk_2.pt  walkforward_20260509_062302.pt  walkforward_20260509_191756.pt  walkforward_20260513_215540.pt  walkforward_20260514_015453.pt  walkforward_20260515_032919.pt  walkforward_20260515_173034.pt  walkforward_20260515_204816.pt
scratch/: analyze_wf.py  build_wf.py  gen_wf.py
src/: __init__.py
src/learning/: __init__.py  objectives.py
src/models/: __init__.py  graph.py  hsama.py  kan.py
src/runtime/: __init__.py  multiscale.py  online.py  replay.py  surprisal.py  temporal.py
tests/: test_full_runtime.py  test_multi_sector.py  test_paper_trading.py  test_quantitative.py  test_trade_pipeline.py
trade/: dataset.py  engine.py  engine_monolithic.py  engine_walkforward.py  features.py  fetch_binance.py  fetch_funding.py  loss.py  scratch_analysis.py
trade/paper_trading/: __init__.py  candles.py  (+6 more)
