[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-c-hsama"
version = "0.1.0"
description = "Project C implementation of the HSAMA architecture"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "torch>=2.2",
  "networkx>=3,<4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "numpy>=1.26,<3",
  "matplotlib>=3.8,<4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
